feature: update a drink database entry