@@ -44,9 +44,19 @@ public class CreateDrinkVh implements IViewHelper {
 			Logger.getLogger(CreateDrinkVh.class.getName()).log(Level.INFO, manufactureDate.toString());
 			expirationDate.setTime(dateFormat.parse(expirationString));
 			Logger.getLogger(CreateDrinkVh.class.getName()).log(Level.INFO, expirationDate.toString());
-			
-			return new Drink(name, ingredients, new Double(price), manufactureDate, expirationDate, 
-				new Category(new Long (id_category)), new Manufacturer(new Long (manufacturer_id)), new Supplier(new Long (supplier_id)));
+
+			Drink drink = new Drink();
+
+            drink.setName(name);
+            drink.setIngredients(ingredients);
+            drink.setPrice(Double.valueOf(price));
+            drink.setManufactureDate(manufactureDate);
+            drink.setExpirationDate(expirationDate);
+            drink.setCategory(new Category(Long.valueOf(id_category)));
+            drink.setManufacturer(new Manufacturer(Long.valueOf(manufacturer_id)));
+            drink.setSupplier(new Supplier(Long.valueOf(supplier_id)));
+
+			return drink;
 		} catch (ParseException | NumberFormatException ex) {
 			Logger.getLogger(CreateDrinkVh.class.getName()).log(Level.SEVERE, ex.getMessage(), ex);
 			return new Drink();
